--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,30 @@
 version: '3'
 services:
   mcu: 
-    #image: "agilertc/agile-mcu:0.0.2"
-    image: "agilertc/janus:v1.0.0"
+    image: "agilertc/agile-mcu:1.0.11"
     # environment: 
     #   - ARTC_APP_TYPE=turn
     volumes:
       - ./log:/var/log
-      - /tmp/records/:/tmp/   
+      # record
+      - ./tmp:/tmp
+      # - /tmp/records/:/tmp/
+      # demo web server with apache
+      # - ./html:/opt/janus/share/janus/demos # remote setting
+      # - ./html/jetstream:/opt/janus/share/janus/jetstream  # remote setting
+      - ../janus-gateway/html:/opt/janus/share/janus/demos
+      - ../jetstream:/opt/janus/share/janus/demos/jetstream # local setting
+      # janus config
+      - ./conf:/opt/janus/etc/janus
     restart: always
     #network_mode: host 
     ports:
-      - 8088:8088 
-      - 8188:8188     
-      - 8000:8000 
-      - 8089:8080
+      - 1080:80
       - 7088:7088
+      # - 8000:8000
+      - 8088:8088 
+      - 8188:8188
+      # - 8089:8080
       #- 10000:10000/udp
       #- 10001:10001/udp
       #- 10002:10002/udp
